# cabat

./: Cargo.toml
cabat_assets/: Cargo.toml
cabat_assets/src/: asset_loader.rs  asset_storage.rs  handle.rs  lib.rs
cabat_assets/src/loaders/: mod.rs
cabat_common/: Cargo.toml
cabat_common/src/: lib.rs
cabat_debug/: Cargo.toml
cabat_debug/src/: lib.rs
cabat_proc/: Cargo.toml
cabat_proc/src/: lib.rs
cabat_renderer/: Cargo.toml
cabat_renderer/examples/: text3d.rs
cabat_renderer/shaders/: text3d.wgsl
cabat_renderer/src/: camera.rs  lib.rs  lighting.rs  loader.rs  render_tools.rs  shared.rs  text2d_pipeline.rs  texture.rs  texture3d_pipeliners.rs  texture3d_renderer.rs  tools.rs
cabat_renderer/src/renderers/: mod.rs  model.rs  texture3d.rs
cabat_renderer/src/renderers/shaders/: model.wgsl  text3d.wgsl
cabat_renderer/src/renderers/text/: mod.rs  text2d.rs  text3d.rs
cabat_renderer/src/text/: atlas.rs  mod.rs  text2d.rs  text3d.rs
cabat_runner/: Cargo.toml
cabat_runner/src/: lib.rs  tools.rs  window.rs
cabat_shipyard/: Cargo.toml
cabat_shipyard/src/: lib.rs
cabat_spatial/: Cargo.toml
cabat_spatial/src/: lib.rs
examples/: basic_runner.rs  loading.rs  model.rs  text3d.rs  texture3d.rs
res/: ipsum.txt
src/: lib.rs
