[package]
name = "cabat"
version = "0.1.1"
edition = "2021"

[workspace]
members = [
  "cabat_assets",
  "cabat_common",
  "cabat_proc",
  "cabat_renderer",
  "cabat_runner", 
  "cabat_shipyard",
  "cabat_spatial", 
]

[workspace.dependencies]
log = "0.4.22"
shipyard = "0.7"

[dependencies]
cabat_assets.path = "cabat_assets"
cabat_common.path = "cabat_common"
cabat_renderer.path = "cabat_renderer"
cabat_runner.path = "cabat_runner"
cabat_shipyard.path = "cabat_shipyard"
cabat_spatial.path = "cabat_spatial"

[dev-dependencies]
env_logger = "0.11.5"
glam = "0.29.0"
log.workspace = true
shipyard.workspace = true
