[package]
name = "cabat_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
cabat_assets = { version = "0.1.0", path = "../cabat_assets" }
cabat_common = { path = "../cabat_common", version = "0.1.0" }
cabat_shipyard = { path = "../cabat_shipyard", version = "0.1.0" }
cabat_spatial = { version = "0.1.0", path = "../cabat_spatial" }
cosmic-text = "0.12.1"
etagere = "0.2.13"
glam = "0.29.0"
glyphon = { git = "https://github.com/grovesNL/glyphon.git", version = "0.6.0" }
image = "0.25.2"
log.workspace = true
lru = "0.12.4"
pollster = "0.3.0"
rustc-hash = "2.0.0"
shipyard.workspace = true
wgpu = "22"
