[package]
name = "shipyard_runner"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
glam = "0.29.0"
log = "0.4.22"
shipyard = "0.7.2"
shipyard_shared = { git = "http://192.168.68.104:3000/BrackenLo/shipyard_shared.git", version = "0.1.0" }
shipyard_tools = { git = "http://192.168.68.104:3000/BrackenLo/shipyard_tools.git", version = "0.1.0" }
winit = "0.30.5"
