[package]
name = "cabat_runner"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
cabat_common = { path = "../cabat_common", version = "0.1.0" }
cabat_shipyard = { path = "../cabat_shipyard", version = "0.1.0" }
glam = "0.29.0"
log.workspace = true
shipyard.workspace = true
winit = "0.30.5"
